--- a/NaturunFrontEnd/index.html
+++ b/NaturunFrontEnd/index.html
@@ -79,7 +79,7 @@
                     for (i = 0; i < response.data.length; i++) {
                          marker = new google.maps.Marker({
                            position: new google.maps.LatLng(response.data[i].coordinates._latitude , response.data[i].coordinates._longitude),
-                           icon: 'https://raw.githubusercontent.com/emiraslan/SCADA_Protocol/master/car36px.png?token=AELGD7IWBP3ESAED4QKIKJS5XXEXO',
+                           icon: 'https://raw.githubusercontent.com/emiraslan/SCADA_Protocol/master/car36px.png?token=',
                            map: map
                         });
                         driversArray.push(marker);
