--- a/NaturunFrontEnd/index.html
+++ b/NaturunFrontEnd/index.html
@@ -102,7 +102,7 @@
 
       }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDiZcZNa1PveN8663rZjSHY8yIKYkZkcIQ&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"
     async defer></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js" async defer></script>
   </body>
